--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "headlessui": "^0.0.0",
     "icons": "^1.0.0",
     "lucide-react": "^0.454.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.13.1",
+    "react-pdf": "^7.7.3",
     "react-router-dom": "^6.28.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
